# ppc-sample-project

./: .gitmodules  CMakeLists.txt  Dockerfile  main.cpp
.devcontainer/: devcontainer.json
